tests/ui/bits_param/missing_param_value.stderr
error: encountered unsupported #[bitfield] attribute
 --> tests/ui/bits_param/missing_param_value.rs:3:12
  |
3 | #[bitfield(bits)]
  |            ^^^^

error: encountered unsupported #[bitfield] attribute format
 --> tests/ui/bits_param/missing_param_value.rs:9:12
  |
9 | #[bitfield(bits(32))]
  |            ^^^^^^^^
